--- a/notebooks/00_ingest_and_clean.ipynb
+++ b/notebooks/00_ingest_and_clean.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "8389ede4",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
        "  'squad_technical': (29, 32)})"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "da108f3f",
    "metadata": {},
    "outputs": [],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "89183d5c",
    "metadata": {},
    "outputs": [],
@@ -164,14 +164,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "622a4b07",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Columns: ['age', 'apps', 'mins', 'av_rat', 'Player', 'gl_mst', 'int_90', 'pres_c_90', 'tck_r', 'tck_90', 'tcon_90', 'k_hdrs', 'hdrs_w_90', 'cr_c_a', 'ch_c_90', 'op_kp_90', 'drb_90', 'asts_90', 'op_kp', 'ast', 'xa', 'tgls_90', 'pts_gm', 'xg', 'gls', 'xg_shot', 'gls_90', 'sht_90', 'shot', 'ability', 'potential', 'det', 'personality', 'apps', 'apps_subs']\n",
+      "Duplicates: 1\n"
+     ]
+    }
+   ],
    "source": [
     "# Save merged squad features\n",
     "from src.utils.paths import FEATURES_DIR\n",
     "if 'squad_merged' in globals():\n",
+    "    # Debug: check for duplicates\n",
+    "    print(\"Columns:\", list(squad_merged.columns))\n",
+    "    print(\"Duplicates:\", squad_merged.columns.duplicated().sum())\n",
+    "    \n",
+    "    # Manual fix: make columns unique\n",
+    "    cols = squad_merged.columns.tolist()\n",
+    "    seen = {}\n",
+    "    unique_cols = []\n",
+    "    for c in cols:\n",
+    "        if c in seen:\n",
+    "            seen[c] += 1\n",
+    "            unique_cols.append(f\"{c}__dup{seen[c]}\")\n",
+    "        else:\n",
+    "            seen[c] = 0\n",
+    "            unique_cols.append(c)\n",
+    "    squad_merged.columns = unique_cols\n",
+    "    \n",
     "    FEATURES_DIR.mkdir(parents=True, exist_ok=True)\n",
     "    feat_path = FEATURES_DIR / 'squad_features.parquet'\n",
     "    squad_merged.to_parquet(feat_path, index=False)\n",
